# CetiSays

./: Cargo.toml  words.txt
src/: lib.rs  main.rs
