[package]
name = "KairavSays"
version = "0.1.0"
edition = "2021"
default-run = "KairavSays"
required-features = ["server"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["hyper", "tokio", "pretty_env_logger"]
default = ["server"]
[dependencies]
fastrand = "1.8.0"
rust-embed = "6.4"
hyper = { version = "0.14", features = ["full"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
pretty_env_logger = { version = "0.4", optional = true }

[[bin]]
name = "godsays-server"
path = "src/bin/server.rs"
required-features = ["server"]
